--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -26,8 +26,11 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-      - run: npm ci
-      - run: npm run build
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.15.0
+      - run: pnpm ci
+      - run: pnpm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
