--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -25,10 +25,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 7.15.0
+          cache: 'pnpm'
       - run: pnpm ci
       - run: pnpm run build
       - name: Upload artifact
