--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,6 +22,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/configure-pages@v1
         id: pages
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.15.0
       - uses: actions/setup-node@v3
         with:
           node-version: 16
