--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "1.0.0-next.48",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.572",
 		"@types/cookie": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
+		"@typescript-eslint/eslint-plugin": "^5.46.0",
+		"@typescript-eslint/parser": "^5.46.0",
+		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.53.1",
-		"svelte-check": "^2.9.2",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"simple-icons-font": "^8.0.0",
+		"svelte": "^3.54.0",
+		"svelte-check": "^2.10.2",
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
+		"typescript": "^4.9.4",
+		"vite": "^3.2.5"
 	},
 	"type": "module"
 }
